# LogShield-Brute-Force-Log-Analyzer

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  detector.py  main.py  pyproject.toml  report.py  requirements.txt  sample_logs.txt
docs/: CYBERSECURITY_PROJECTS_PAGE2.md  DETECTION_LOGIC.md  EVIDENCE.md  FUTURE_IMPROVEMENTS.md  PORTFOLIO_SUMMARY.md  SECURITY_REVIEW.md  THREAT_MODEL.md
reports/: incident_report.json  incident_report.txt
